ensure at smaller screen sizes the map and footer does not overlap the product section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -403,5 +403,11 @@ footer i {
         grid-gap: 70px;
         height: 500px;
     }
-    
+    #location-map {
+        clear: both;
+        padding: 50px;
+        display: block;
+        position: relative;
+        top: 1000px;
+    }
 }
